[0529] jsTest 오답 정리

--- a/jsTest/index.html
+++ b/jsTest/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
-        <script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <!-- <script>
             function change() {
                 var btn = document.getElementById("name");
 
@@ -18,11 +18,11 @@
 
                 btn.textContent = "likelion_" + number;
             }
-        </script>
-    </head>
-    <body>
-        <span id="name">likelion_1</span><br />
-        <input type="button" value="클릭" onClick="change()" />
-        <!-- <script src="jsTest.js"></script> -->
-    </body>
+        </script> -->
+  </head>
+  <body>
+    <span id="name">likelion_1</span><br />
+    <input type="button" value="클릭" onClick="change()" />
+    <script src="jsTest.js"></script>
+  </body>
 </html>
