[0605] 에브리타임JS

--- a/everytime/main.html
+++ b/everytime/main.html
@@ -147,14 +147,14 @@
               </div>
             </div>
   
-            <div class="new_post">
+            <div class="new_post" data-include-path="post.html">
               <span style="flex:7" class="span4">새 글을 작성해주세요!</span>
               <div>
                 <img src="img/container.write.background.png" style="width: 30px;">
               </div>
             </div>
   
-            <div class="aside_live">
+            <div class="aside_live" style="visibility:visible;">
       
               <div class="post_">
                 <div class="div_">
@@ -304,5 +304,7 @@
   </div>
 
   <footer class="footer"></footer>
+  
 </body>
+<script src="js/main.js"></script>
 </html>
