--- a/everytime/detail.html
+++ b/everytime/detail.html
@@ -6,11 +6,16 @@
     <title>에브리타임 상세</title>
     <link rel="stylesheet" href="css/detail.css" />
   </head>
+
   <body>
     <!--상단 header-->
     <header>
       <div id="logo">
         <img src="img/logo.png" />
+      </div>
+      <div class="burger-bar">
+        <img src ="img/aside.title.hamburger.png">
+        <p>비밀게시판</p>
       </div>
       <div class="nav">
         <ul id="menu">
@@ -24,8 +29,8 @@
         </ul>
       </div>
       <div id="account">
-        <img src="img/chat.png" alt="chat" />
-        <img src="img/person.png" alt="person" />
+        <img src="img/chat.png" alt="chat"/>
+        <img src="img/person.png" alt="person"/>
       </div>
     </header>
 
@@ -143,7 +148,7 @@
           <div class="comment-info">
             <div class="comment-wrap">
               <img src="img/like.png" width="12px" />
-              <div class="comment-like-num">9</div>
+              <div class="comment-like-num">0</div>
             </div>
             <div class="comment-wrap">
               <img src="img/reply.png" width="12px" />
@@ -177,14 +182,52 @@
               </div>
             </div>
             <div class="comment-writer-text-right">
-              <p class="add">대댓글</p>
+              <p class="add reply-btn">대댓글</p>
               <p class="add">공감</p>
-              <p class="add">삭제</p>
+              <p class="add">쪽지</p>
+              <p class="add">신고</p>
             </div>
           </div>
           <div class="comment-text-content">
             <p class="text">우와</p>
             <p class="time">방금</p>
+          </div>
+          <div class="add-comment-wrap">
+            <div class="add-comment-text-wrap">
+              <div class="comment-writer-wrap">
+                <div class="comment-writer">
+                  <div class="comment-writer-img">
+                    <img src="img/anonymous.profile.png" />
+                  </div>
+                  <div class="comment-writer-text-left">
+                    <p class="anonymous">익명(글쓴이)</p>
+                  </div>
+                </div>
+                <div class="comment-writer-text-right">
+                  <p class="add">공감</p>
+                  <p class="add">쪽지</p>
+                  <p class="add">신고</p>
+                </div>
+              </div>
+              <div class="comment-text-content">
+                <p class="text">허허허</p>
+                <p class="time">방금</p>
+              </div>
+            </div>
+            <div class="add-comment-writing-wrap">
+              <div class="submit-section">
+                <input
+                  type="text"
+                  placeholder="댓글을 입력하세요."
+                  id="comment-input"
+                />
+                <input type="checkbox" id="anonymousCheckbox"/>
+                <span class="checkbox" id="anonymousText">익명</span>
+                <button onclick="messageAlert()" type="submit">
+                  <img src="img/container.articles.write.submit.png" />
+                </button>
+              </div>
+            </div>
           </div>
         </div>
         <!--4. 댓글 작성 container-->
@@ -193,11 +236,11 @@
             <input
               type="text"
               placeholder="댓글을 입력하세요."
-              class="comment-input"
+              id="comment-input"
             />
-            <input type="checkbox" />
-            <span class="checkbox">익명</span>
-            <button type="submit">
+            <input type="checkbox" id="anonymousCheckbox"/>
+            <span class="checkbox" id="anonymousText">익명</span>
+            <button onclick="messageAlert()" type="submit">
               <img src="img/container.articles.write.submit.png" />
             </button>
           </div>
@@ -308,6 +351,6 @@
         </div>
       </div>
     </div>
-    <!--main-content-->
+    <script src="/js/detail.js"></script>
   </body>
 </html>
