--- a/everytime/post.html
+++ b/everytime/post.html
@@ -14,6 +14,10 @@
       <section class="sec2">
         <input type="text" class="content" placeholder="그럼 깃 충돌 이딴거 안생겼어"></input>
       </section>
+      <section id="notice">
+        <p>질문 글을 작성하면 게시판 상단에 일정 기간 동안 노출되어, 더욱 빠르게 답변을 얻을 수 있게 됩니다.<br>
+          또한, 다른 학우들이 정성껏 작성한 답변을 유지하기 위해, 댓글이 달린 이후에는 <span>글을 수정 및 삭제할 수 없습니다.</span></p>
+    </section>
       <section class="sec3">
         <div class="left">
           <img
@@ -23,13 +27,18 @@
           <img src="./img/container.articles.write.attach.png" alt="클립모양" />
         </div>
         <div class="right">
-          <div class="checkbox">
-          <input type="checkbox"></input>
-          <p>익명</p>
+          <div class="checkbox1">
+            <input type="checkbox" id="check_q"></input>
+            <label for="check" class="check1_q">질문</label>
+          </div>  
+          <div class="checkbox2">
+          <input type="checkbox" id="check"></input>
+          <label for="check" class="check1">익명</label>
         </div>
           <img class="pencil" src="./img/container.articles.write.submit.png" alt="글작성" />
         </div>
       </section>
     </section>
+    <script src="./js/post.js"></script>
   </body>
 </html>
