--- a/everytime/main.html
+++ b/everytime/main.html
@@ -143,7 +143,34 @@
           </div>
       </div>
     </div>
-      <div class="newWrite"><span style="display: inline-block;">새 글을 작성해주세요!</span><img alt="pen" src="img/pen.png" style="width: 20px; height: 20px; float: right;"></div>
+      <div id="newWrite" onclick="show('container_post')"><span style="display: inline-block;">새 글을 작성해주세요!</span><img alt="pen" src="img/pen.png" style="width: 20px; height: 20px; float: right;"></div>
+      <div id="container_post" style="display: none;">
+        <form class="form">
+            <input name="title" type="text" placeholder="제목을 입력하세요." style="height: 50px;">
+            <input name="content" type="text" placeholder="내용을 입력하세요." style="height: 300px;">
+        </form>
+        <div id="question" style="display: none;">
+        <form>
+          <div>질문 글을 작성하면 게시판 상단에 일정 기간 동안 노출되어, 더욱 빠르게 답변을 얻을 수 있게 됩니다.<br>
+          또한, 다른 학우들이 정성껏 작성한 답변을 유지하기 위해, 댓글이 달린 이후에는 <b>글을 수정 및 삭제할 수 없습니다.</b></div>
+          </form>   
+        </div> 
+        <form class="footer">
+            <ul>
+                <li><img src="img/container.articles.write.hashtag.png" alt="#"></li>
+                <li><img src="img/container.articles.write.attach.png" alt="클립"></li>
+            </ul>
+            <ul class="optoins">
+                <label class="check">
+                    <input type="checkbox" style="margin-right: 5px;" id="writeRed" onchange="show_qna('question')"><span id="text">질문</span>
+                </label>
+                <label class="check">
+                  <input type="checkbox" style="margin-right: 5px;" id="writeRed2" onchange="changeColor()"><span id="text2">익명</span>
+              </label>
+                <li class="submit"><img src="img/container.articles.write.submit.png" alt="write"></li>
+            </ul>
+        </form> 
+        </div>
       <article class="list">
         <div class="imgflex">
           <div class="article">
@@ -260,4 +287,5 @@
   </div>
   </div>
   </body>
+  <script src="/Users/choeyun-yeong/Desktop/FE_hw/everytime/js/main.js"></script>
 </html>
