[0605] 에브리타임 JS

--- a/everytime/detail.html
+++ b/everytime/detail.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="css/detail.css" />
     <title>에브리타임</title>
+    <script src="js/detail.js" defer></script>
   </head>
   <body>
     <header class="header">
@@ -185,6 +186,92 @@
                           스크랩
                       </button>
                   </div>
+              </div>
+            </div>
+            <div class="B_anony_cmt">
+              <div class="anony_cmt">
+                <div class="pos_head">
+                  <div class="profile">
+                    <img alt="프로필사진" src="img/everytime_detail_img/anonymous.profile.png">
+                    <div class="nickname">
+                      익명2
+                    </div>
+                  </div>
+                  <div class="massage">
+                      <button>대댓글</button>
+                      <button>공감</button>
+                      <button>쪽지</button>
+                      <button>신고</button>
+                  </div>
+                </div>
+                <div class="pos_mid">
+                  우와
+                </div>
+                <div class="timestamp">
+                  03/12 10:42
+                </div>
+                <div class="anony_cmt" id="anony_cmt">
+                  <div class="pos_head">
+                    <div class="profile">
+                      <img alt="프로필사진" src="img/everytime_detail_img/anonymous.profile.png">
+                      <div class="nickname">
+                        익명(글쓴이)
+                      </div>
+                    </div>
+                    <div class="massage">
+                        <button>공감</button>
+                        <button>쪽지</button>
+                        <button>신고</button>
+                    </div>
+                  </div>
+                  <div class="pos_mid">
+                    우와＼＼ ٩(๑❛ワ❛๑)و ／／
+                  </div>
+                  <div class="timestamp">
+                    03/12 10:42
+                  </div>
+                </div>
+                <div class="typing" id="typing">
+                  <form class="input_comment">
+                    <div class="input_box">
+                      <input type="text" id="comment" name="comment" placeholder='댓글을 입력하세요.'>
+                    </div> 
+                    <div class="flex_end">
+                      <div class="check">
+                          <input type="checkbox" id="anony" />
+                          <div class="myCheckbox">익명</div>
+                      </div>
+                      <button class="submit">
+                          <img
+                            alt="글쓰기"
+                            src="img/everytime_other_img/container.articles.write.submit.png"
+                          />
+                      </button>
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </div>
+            <div class="anony_cmt">
+              <div class="pos_head">
+                <div class="profile">
+                  <img alt="프로필사진" src="img/everytime_detail_img/anonymous.profile.png">
+                  <div class="nickname">
+                    익명3
+                  </div>
+                </div>
+                <div class="massage">
+                    <button>대댓글</button>
+                    <button>공감</button>
+                    <button>쪽지</button>
+                    <button>신고</button>
+                </div>
+              </div>
+              <div class="pos_mid">
+                운영진분들 멋있다!
+              </div>
+              <div class="timestamp">
+                방금
               </div>
             </div>
             <div class="typing">
