--- a/everytime/main.html
+++ b/everytime/main.html
@@ -43,35 +43,7 @@
         </div>
       </div>
     </nav>
-    <!-- 2. 게시판종류 -->
-    <!--<nav style="display: block">
-      <div class="wrap">
-        <div id="logo">
-          <a href="/"><img src="/img/nav.logo.png" /></a>
-          <p>
-            <span class="name multiple">에브리타임</span
-            ><span class="subname">덕성여대</span>
-          </p>
-        </div>
-        <div id="account">
-          <a href="/message" title="쪽지함" class="icon message">쪽지함</a>
-          <a href="/my" title="내 정보" class="icon my">내 정보</a>
-          <input type="hidden" id="userUserid" value="bms107012" />
-          <input type="hidden" id="userSchool" value="14" />
-          <input type="hidden" id="userCampus" value="27" />
-        </div>
-        <ul id="menu">
-          <li class="active"><a href="/">게시판</a></li>
-          <li><a href="/timetable">시간표</a></li>
-          <li><a href="/lecture">강의실</a></li>
-          <li><a href="/calculator">학점계산기</a></li>
-          <li><a href="/friend">친구</a></li>
-          <li><a href="https://bookstore.everytime.kr">책방</a></li>
-          <li><a href="https://www.campuspick.com/">캠퍼스픽</a></li>
-        </ul>
-      </div>
-      <div class="shadow"></div>
-    </nav>-->
+
     <div id="submenu">
       <div class="wrap">
         <div class="divider"></div>
@@ -269,13 +241,112 @@
     <br />
     <!-- 3. 본문 -->
     <div id="container" class="article">
-      <!-- 3-1. 본문1- 중앙 본문 -->
       <aside class="none">
         <div class="title">
           <a class="hamburger"></a>
           <h1><a href="/255745">비밀게시판</a></h1>
         </div>
       </aside>
+      <!-- 3-1. 본문2 - 우측메뉴 -->
+      <div class="rightside">
+        <div class="card">
+          <div class="board">
+            <h3>
+              <a href="/hotarticle">HOT 게시물<span>더 보기</span></a>
+            </h3>
+            <a class="list" href="/255745/v/338973058"
+              ><time>55분 전</time>
+              <p>학식 마성떡볶이 미친거 아냐...?</p>
+              <hr /></a
+            ><a class="list" href="/255745/v/338969355"
+              ><time>04/11 09:26</time>
+              <p>미추홀구</p>
+              <hr /></a
+            ><a class="list" href="/255745/v/338974387"
+              ><time>38분 전</time>
+              <p>부정선거 끌올</p>
+              <hr /></a
+            ><a class="list" href="/255745/v/338973469"
+              ><time>50분 전</time>
+              <p>나경원 안철수 김은혜 이준석 배현진 외 n명</p>
+              <hr
+            /></a>
+          </div>
+        </div>
+        <div class="card">
+          <div class="board">
+            <h3>
+              <a href="/bestarticle">BEST 게시판<span>더 보기</span></a>
+            </h3>
+          </div>
+        </div>
+        <div class="card">
+          <div class="board">
+            <h3><a>학교 소식</a></h3>
+            <a class="article" href="/532598/v/338976893"
+              ><p class="title">
+                🌊2024학년도 제2차 전체학생대표자회의 소집 공고🌊
+              </p>
+              <p class="small">
+                #총학생회_파도<br />안녕하세요, 덕성여자대학교 제40대 총학생회
+                파도입니다.<br />2024학년도 제2차 전체학생대표자회의(이하
+                전학대회)를 다음과 같
+              </p>
+              <h4>총학생회</h4>
+              <ul class="status">
+                <li class="vote active">0</li>
+                <li class="comment active">0</li>
+              </ul>
+              <hr /></a
+            ><a class="article" href="/462040/v/338908104"
+              ><p class="title">
+                🔹 산업별 기업 &amp; 대외활동 알아보기 - 뷰티산업 편🔹
+              </p>
+              <p class="small">
+                안녕하세요!<br />덕성여자대학교 대학일자리본부 소속
+                #커리어서포터즈 입니다.<br />이번 학기도 시리즈별 카드뉴스로
+                여러분들 찾아뵙게 되었는데요!<br />매주 수
+              </p>
+              <h4>대학일자리본부</h4>
+              <ul class="status">
+                <li class="vote active">8</li>
+                <li class="comment active">0</li>
+              </ul>
+              <hr
+            /></a>
+          </div>
+        </div>
+        <div class="card">
+          <div class="board">
+            <h3>
+              <a href="/lecture">최근 강의평<span>더 보기</span></a>
+            </h3>
+            <a class="article" href="/lecture/view/2252200"
+              ><span class="star"
+                ><span class="on" style="width: 100%"></span
+              ></span>
+              <p class="title">국제통상학입문 : 원동환</p>
+              <p class="small">
+                갓 갓 갓<br />진짜 설명을 기가막히게 잘하세요 (주관적
+                기준이긴해요)<br />타임어택이긴 해도 오픈북이라 할만해요<br />이해하기
+                쉽게 설명해주시고 덕분에 무역에
+              </p>
+              <hr /></a
+            ><a class="article" href="/lecture/view/1940120"
+              ><span class="star"
+                ><span class="on" style="width: 60%"></span
+              ></span>
+              <p class="title">컴퓨팅사고 : 진동욱</p>
+              <p class="small">
+                강의력은 솔직히 잘 모르겟어요<br />피피티도 옛날꺼 계속
+                쓰시더라구요<br />그냥 시험은 교안 피피티 달달 외우면 됨요
+              </p>
+              <hr
+            /></a>
+          </div>
+        </div>
+      </div>
+      <!-- 3-2. 본문1- 중앙 본문 -->
       <div class="wrap title">
         <h1><a href="/255745">비밀게시판</a></h1>
       </div>
@@ -306,6 +377,7 @@
       </div>
       <div class="wrap articles">
         <a id="writeArticleButton">새 글을 작성해주세요!</a>
+
         <article class="list">
           <a class="article"
             ><div class="desc">
@@ -430,109 +502,9 @@
         </div>
       </div>
       <hr />
-
-      <!-- 3-2. 본문2 - 우측메뉴 -->
-      <div class="rightside">
-        <div class="card">
-          <div class="board">
-            <h3>
-              <a href="/hotarticle">HOT 게시물<span>더 보기</span></a>
-            </h3>
-            <a class="list" href="/255745/v/338973058"
-              ><time>55분 전</time>
-              <p>학식 마성떡볶이 미친거 아냐...?</p>
-              <hr /></a
-            ><a class="list" href="/255745/v/338969355"
-              ><time>04/11 09:26</time>
-              <p>미추홀구</p>
-              <hr /></a
-            ><a class="list" href="/255745/v/338974387"
-              ><time>38분 전</time>
-              <p>부정선거 끌올</p>
-              <hr /></a
-            ><a class="list" href="/255745/v/338973469"
-              ><time>50분 전</time>
-              <p>나경원 안철수 김은혜 이준석 배현진 외 n명</p>
-              <hr
-            /></a>
-          </div>
-        </div>
-        <div class="card">
-          <div class="board">
-            <h3>
-              <a href="/bestarticle">BEST 게시판<span>더 보기</span></a>
-            </h3>
-          </div>
-        </div>
-        <div class="card">
-          <div class="board">
-            <h3><a>학교 소식</a></h3>
-            <a class="article" href="/532598/v/338976893"
-              ><p class="title">
-                🌊2024학년도 제2차 전체학생대표자회의 소집 공고🌊
-              </p>
-              <p class="small">
-                #총학생회_파도<br />안녕하세요, 덕성여자대학교 제40대 총학생회
-                파도입니다.<br />2024학년도 제2차 전체학생대표자회의(이하
-                전학대회)를 다음과 같
-              </p>
-              <h4>총학생회</h4>
-              <ul class="status">
-                <li class="vote active">0</li>
-                <li class="comment active">0</li>
-              </ul>
-              <hr /></a
-            ><a class="article" href="/462040/v/338908104"
-              ><p class="title">
-                🔹 산업별 기업 &amp; 대외활동 알아보기 - 뷰티산업 편🔹
-              </p>
-              <p class="small">
-                안녕하세요!<br />덕성여자대학교 대학일자리본부 소속
-                #커리어서포터즈 입니다.<br />이번 학기도 시리즈별 카드뉴스로
-                여러분들 찾아뵙게 되었는데요!<br />매주 수
-              </p>
-              <h4>대학일자리본부</h4>
-              <ul class="status">
-                <li class="vote active">8</li>
-                <li class="comment active">0</li>
-              </ul>
-              <hr
-            /></a>
-          </div>
-        </div>
-        <div class="card">
-          <div class="board">
-            <h3>
-              <a href="/lecture">최근 강의평<span>더 보기</span></a>
-            </h3>
-            <a class="article" href="/lecture/view/2252200"
-              ><span class="star"
-                ><span class="on" style="width: 100%"></span
-              ></span>
-              <p class="title">국제통상학입문 : 원동환</p>
-              <p class="small">
-                갓 갓 갓<br />진짜 설명을 기가막히게 잘하세요 (주관적
-                기준이긴해요)<br />타임어택이긴 해도 오픈북이라 할만해요<br />이해하기
-                쉽게 설명해주시고 덕분에 무역에
-              </p>
-              <hr /></a
-            ><a class="article" href="/lecture/view/1940120"
-              ><span class="star"
-                ><span class="on" style="width: 60%"></span
-              ></span>
-              <p class="title">컴퓨팅사고 : 진동욱</p>
-              <p class="small">
-                강의력은 솔직히 잘 모르겟어요<br />피피티도 옛날꺼 계속
-                쓰시더라구요<br />그냥 시험은 교안 피피티 달달 외우면 됨요
-              </p>
-              <hr
-            /></a>
-          </div>
-        </div>
-      </div>
     </div>
     <!-- 4. footer -->
-    <div id="bottom">
+    <footer id="bottom">
       <ul class="links">
         <li><a href="/page/serviceagreement">이용약관</a></li>
         <li class="privacy"><a href="/page/privacy">개인정보처리방침</a></li>
@@ -543,6 +515,7 @@
         <li class="copyright"><a href="/">© 에브리타임</a></li>
       </ul>
       <span>직업정보제공사업 신고번호 : J1204020230008</span>
-    </div>
+    </footer>
+    <script src="js/main.js"></script>
   </body>
 </html>
