--- a/everytime/post.html
+++ b/everytime/post.html
@@ -27,6 +27,7 @@
 
 
             <div class="typefin">
+                <div class=" qu"><input type="checkbox">질문</div>
                 <div class=" anony"><input type="checkbox">익명</div>
                 <button type="submit"><img src="./img/pencil.png" width=40 height=40></button>
             </div>
