--- a/everytime/login.html
+++ b/everytime/login.html
@@ -1,42 +1,32 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="css/login.css" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/login.js' %}" />
     <title>에브리타임 로그인</title>
   </head>
   <body>
     <div class="total">
       <div class="logo">
-        <img alt="에브리타임로고" src="img/everytime_other_img/logo.png" />
+        <img alt="에브리타임로고" src="{% static 'img/logo.png' %}" />
       </div>
       <div class="main">
         <form class="login-form">
+          {% csrf_token %} {{ form.as_p }}
           <div class="id">
-            <input
-              type="text"
-              id="id"
-              name="userid"
-              placeholder="아이디"
-              required
-            />
+            <input type="text" id="id_username" name="userid" placeholder="아이디" required />
           </div>
           <div class="password">
-            <input
-              type="password"
-              id="password"
-              name="password"
-              placeholder="비밀번호"
-              required
-            />
+            <input type="password" id="id_password" name="password" placeholder="비밀번호" required />
           </div>
           <div class="submit">
             <button type="submit">에브리타임 로그인</button>
           </div>
         </form>
         <div class="signup">
-          <a href="signup.html">회원가입</a>
+          <a href="{% url 'accounts:signup' %}">회원가입</a>
         </div>
         <div class="info">
           <div class="a">이용약관</div>
@@ -46,6 +36,6 @@
         </div>
       </div>
     </div>
-    <script src="./js/login.js"></script>
+    <script src="{% static 'js/login.js' %}"></script>
   </body>
 </html>
